# GNSSLog

./: LICENSE  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.old  CMakeLists.txt  rtk_processor.cpp  rtk_processor.h
app/src/main/cpp/rtklib/: lambda.c  rtcm3e.c  rtkcmn.c  rtklib.h  rtkpos.c  solution.c  srtk.h  srtkpp.cpp
app/src/main/java/com/example/geodgnss/: MainActivity.java  NtripClient.java  RTKProcessor.java
app/src/main/res/: activity_main.xml
app/src/main/res/drawable/: status_indicator.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/geodgnss/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
